final clean up; ready to go, imo 👀 @Tyhcass

--- a/paper/main_wrangling.bib
+++ b/paper/main_wrangling.bib
@@ -173,12 +173,12 @@
 @article{ChangLi2015,
 	author = {Chang, Andrew and Li, Phillip},
 	date = {2015},
-	date-modified = {2025-11-15 14:49:48 -0600},
+	date-modified = {2025-11-18 10:55:37 -0600},
 	journaltitle = {Finance and Economics Discussion Series},
 	keywords = {experiment,replication},
 	pages = {1--25},
 	timestamp = {2020-06-26T03:42:07Z},
-	title = {Is Economics Research Replicable? {{Sixty}} Published Papers from Thirteen Journals Say 'Usually Not'},
+	title = {Is Economics Research Replicable? {{Sixty}} Published Papers from Thirteen Journals Say `Usually Not'},
 	urldate = {2018-11-17},
 	volume = {7},
 	bdsk-url-1 = {http://dx.doi.org/10.17016/FEDS.2015.083}}
@@ -892,14 +892,13 @@
 
 @article{SoltEtAl2016,
 	abstract = {How does the context of income inequality in which people live affect their belief in meritocracy, the ability to get ahead through hard work? A prominent recent study by Newman, Johnston, and Lown argues that, consistent with the conflict theory, exposure to higher levels of local income inequality leads lower-income people to become more likely to reject---and higher-income people to become more likely to accept---the dominant United States ideology of meritocracy. Here, we show that this conclusion is not supported by the studys own reported results and that even these results depend on pooling three distinctly different measures of meritocracy into a single analysis. We then demonstrate that analysis of a larger and more representative survey employing a single consistent measure of the dependent variable yields the opposite conclusion. Consistent with the relative power theory, among those with lower incomes, local contexts of greater inequality are associated with more widespread belief that people can get ahead if they are willing to work hard.},
-	author = {Solt, Frederick and Hu, Yue and Hudson, Kevan and Song, Jungmin and Yu, Dong "Erico"},
+	author = {Solt, Frederick and Hu, Yue and Hudson, Kevan and Song, Jungmin and Yu, Dong `Erico'},
 	copyright = {All rights reserved},
 	date = {2016},
-	date-modified = {2025-11-15 14:49:48 -0600},
+	date-modified = {2025-11-18 10:58:31 -0600},
 	eprint = {http://rap.sagepub.com/content/3/4/2053168016672101.full.pdf},
 	file = {C:\Users\Q\Zotero\storage\NIHKFLAD\Solt et al2016_Economic inequality and belief in meritocracy in the united states.pdf},
 	ids = {SoltEtAl2016a,SoltEtAl2016b},
-	issue = {4},
 	journaltitle = {Research \& Politics},
 	keywords = {cognition,Inequality},
 	langid = {english},
@@ -912,15 +911,14 @@
 	bdsk-url-1 = {https://doi.org/10.1177/2053168016672101}}
 
 @article{SoltEtAl2017,
-	author = {Solt, Frederick and Hu, Yue and Hudson, Kevan and Song, Jungmin and Yu, Dong "Erico"},
+	author = {Solt, Frederick and Hu, Yue and Hudson, Kevan and Song, Jungmin and Yu, Dong `Erico'},
 	copyright = {All rights reserved},
 	date = {2017-07},
-	date-modified = {2025-11-15 14:49:48 -0600},
+	date-modified = {2025-11-18 10:59:06 -0600},
 	file = {C\:\\Users\\Q\\Zotero\\storage\\7LIZMBEA\\Solt et al2017_Economic inequality and class consciousness.pdf;C\:\\Users\\Q\\Zotero\\storage\\9ZNWZSAJ\\ SoltEtAl 2017_Economic Inequality and Class Consciousness.pdf;C\:\\Users\\Q\\Zotero\\storage\\RXDU4PMX\\ SoltEtAl 2017_Economic Inequality and Class Consciousness.pdf},
 	ids = {SoltEtAl2017a,SoltEtAl2017b},
 	issn = {0022-3816, 1468-2508},
-	issue = {3},
-	journaltitle = {The Journal of Politics},
+	journal = {Journal of Politics},
 	keywords = {cognition},
 	langid = {english},
 	number = {3},
@@ -928,13 +926,14 @@
 	timestamp = {2021-02-02T03:00:25Z},
 	title = {Economic Inequality and Class Consciousness},
 	volume = {79},
+	year = {2017},
 	bdsk-url-1 = {https://doi.org/10.1086/690971}}
 
 @software{SoltEtAl2018a,
 	abstract = {Collects and formats public opinion data for use in estimating cross-national latent variables.},
-	author = {Solt, Frederick and Hu, Yue and Tai, Yuehong},
+	author = {Solt, Frederick and Hu, Yue and Tai, Yuehong Cassandra},
 	date = {2018},
-	date-modified = {2025-11-15 14:49:48 -0600},
+	date-modified = {2025-11-18 10:59:23 -0600},
 	title = {{{DCPOtools}}: Tools for Dynamic Comparative Public Opinion},
 	urldate = {2022-02-18},
 	version = {0.1.0},
