--- a/paper/main_wrangling.bib
+++ b/paper/main_wrangling.bib
@@ -1082,7 +1082,7 @@
 
 @article{WooEtAl2025,
 	abstract = {Objective Support for gay rights has increased in the publics of many countries over recent decades, but the scholarship on the topic has been hindered by the limited available data on these trends in public opinion. The goal of the Support for Gay Rights (SGR) dataset is to overcome this problem. Method The SGR dataset is constructed by combining a comprehensive collection of survey data with a latent-variable model to provide annual time-series estimates of public support for gay rights across 118 countries and over as many as 51 years that are comparable across space and time. Results We show these data perform well in validation tests and demonstrate their potential by replicating the influential but recently questioned finding of Andersen and Fetner that more income inequality yields less tolerant and supportive attitudes toward gay people. Conclusion We anticipate that the SGR data will become a crucial source for cross-national, cross-regional, and longitudinal research that improves our understanding of the sources and consequences of public support for gay rights.},
-	author = {Woo, Byung-Deuk and Ko, Hyein and Tai, Yuehong Cassandra and Hu, Yue and Solt, Frederick},
+	author = {Woo, Byung-Deuk and Ko, Hyein and Tai, Yuehong Cassandra and Solt, Frederick},
 	date = {2025-01},
 	date-modified = {2025-11-15 14:49:48 -0600},
 	file = {C:\Users\Q\Zotero\storage\M8BVVDX6\ WooEtAl Public Support for Gay Rights Across Countries and Over Time.pdf},
